# War-Gods-Total-War

./: .gitignore  MODULARIZATION_ROADMAP.md  README.md  campaign_engine_initialiser.py  index.html  pyproject.toml  requirements.txt  run_new_export.py  run_ui.py  test_phase2_domains.py
docs/: API.md  ARCHITECTURE.md  EXTENDING.md  LIVING_CHRONICLE_ROADMAP.md  PROJECT_STRUCTURE.md  RULES_FRAMEWORK.md  WORLD_LORE_FOUNDATION.md  index.html
docs/assets/: data.js  heraldry.js  heraldry_lineage.js  main.js  map.js  map_base.js  map_layers.js  map_procedural_old.js  rng.js  sim.js  style.css  (+2 more)
scripts/: export_web_seed.py  run_export.py  run_frontier_soak.py  run_ui.py  validate_observer_balance.py  validate_observer_data.py
tests/: conftest.py  observer_validation.py  test_cadet_branches_legitimacy.py  test_character_ambitions_fears.py  test_character_attributes.py  test_character_memories.py  test_character_relationships.py  test_character_schema_expansion.py  test_court_office_system.py  test_dynasty_house_system.py  test_export_parity.py  test_faction_ai_priorities.py  test_family_tree_data.py  test_frontier_soak_script.py  test_internal_politics.py  test_lore_csv_bootstrap.py  test_observer_balance_validation.py  test_observer_data_validation.py  test_phase2_domains.py  test_phase3_persistence.py  test_phase5_application.py  test_phase7_turn_simulation.py  test_phase9_pulse_scheduler.py  test_province_social_groups.py  test_revolts_and_instability.py  test_seed_frontier_activation.py  test_succession_expansion.py  test_survival_economy.py  test_web_map_integration.py
(+255 files in other folders)
